credito title alignment issue is fixed

--- a/frontend/src/app/credito/credito.component.css
+++ b/frontend/src/app/credito/credito.component.css
@@ -1,6 +1,6 @@
-.credito-container.blurred { filter: blur(1.2px); pointer-events: none; user-select: none; }
 /* search */
 .cge-text { display: flex; width: 35%; font-weight: bold; gap: 10px; }
+.title-area {justify-content: flex-end;}
 /* search */
 /* main-table */
 .credito-container td:nth-child(8),
